# tpl.c

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  DESIGN.md  Makefile  README.md  test.sh
src/: libtpl.c  libtpl.h  test.c  tpl.c  tpl.h
